--- a/.github/workflows/BuildServiceAContainer.yml
+++ b/.github/workflows/BuildServiceAContainer.yml
@@ -11,3 +11,4 @@ jobs:
         name: seyhello/revolgy-task
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: service-a/Dockerfile
