--- a/service-a/Dockerfile
+++ b/service-a/Dockerfile
@@ -1,9 +1,7 @@
 FROM nginx
 
-COPY wrapper.sh /
-
 COPY html /usr/share/nginx/html
 
 EXPOSE 80
 
-CMD ["./wrapper.sh"]
+CMD ["exec nginx -g "daemon off;""]
