--- a/service-b/Dockerfile
+++ b/service-b/Dockerfile
@@ -1,8 +1,8 @@
 FROM nginx
 
-COPY wrapper.sh /
+COPY /wrapper.sh /
 
-COPY html /usr/share/nginx/html
+COPY /html /usr/share/nginx/html
 
 EXPOSE 80
 
