--- a/service-a/Dockerfile
+++ b/service-a/Dockerfile
@@ -1,7 +1,6 @@
 FROM nginx
 
-ARG BUILD_DIR=build
-COPY ${BUILD_DIR}/html /usr/share/nginx/html
+COPY build/html /usr/share/nginx/html
 
 EXPOSE 80
 
