--- a/.github/workflows/BuildServiceAContainer.yml
+++ b/.github/workflows/BuildServiceAContainer.yml
@@ -1,17 +1,18 @@
 name: Publish Docker image to my seyhello/revolgy-task repository
 on:
   push:
+    branches: [ master ]
     paths:
     - 'service-a/**'
-    jobs:
-      build:
-        runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@master
-          - name: Publish to Docker Hub
-            uses: HurricanKai/Publish-Docker-Github-Action@master
-            with:
-              name: seyhello/revolgy-task
-              username: ${{ secrets.DOCKER_USERNAME }}
-              password: ${{ secrets.DOCKER_PASSWORD }}
-              dockerfile: service-a/Dockerfile
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Publish to Docker Hub
+        uses: HurricanKai/Publish-Docker-Github-Action@master
+        with:
+          name: seyhello/revolgy-task:service-a
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          dockerfile: service-a/Dockerfile
