--- a/.github/workflows/BuildServiceAContainer.yml
+++ b/.github/workflows/BuildServiceAContainer.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Publish to Docker Hub
         uses: HurricanKai/Publish-Docker-Github-Action@master
         with:
-          name: seyhello/revolgy-task:service-a
+          name: seyhello/revolgy-task
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           dockerfile: service-a/Dockerfile
+          tags: service-a
