--- a/.github/workflows/BuildServiceAContainer.yml
+++ b/.github/workflows/BuildServiceAContainer.yml
@@ -9,11 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Publish to Docker Hub
-        uses: HurricanKai/Publish-Docker-Github-Action@master
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1.1.0
         with:
-          name: seyhello/revolgy-task
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: seyhello/revolgy-task
           dockerfile: service-a/Dockerfile
           tags: service-a
