--- a/service-b/Dockerfile
+++ b/service-b/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx
 
 COPY service-b/wrapper.sh /
 
-COPY /html /usr/share/nginx/html
+COPY service-b/html /usr/share/nginx/html
 
 EXPOSE 80
 
