--- a/.github/workflows/DeployServiceB.yml
+++ b/.github/workflows/DeployServiceB.yml
@@ -16,4 +16,4 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-central-1
+        aws-region: eu-central-1
