--- a/.github/workflows/DeployServiceB.yml
+++ b/.github/workflows/DeployServiceB.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ master ]
     paths:
-    - "service-b/*"
+    - 'service-b/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,3 +17,11 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
+
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: service-b/service_b.json
+        service: svc_revolgy_service-a
+        cluster: cluster_revolgy
+        wait-for-service-stability: true
