--- a/.github/workflows/DeployServiceA.yml
+++ b/.github/workflows/DeployServiceA.yml
@@ -1,12 +1,25 @@
 name: Deploy task definion to the ECS cluster
 on:
-  push:
+  release:
     branches: [ master ]
     paths:
-    - 'service-b/**'
+    - 'service-a/**'
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1.1.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: seyhello/revolgy-task
+          dockerfile: service-a/Dockerfile
+          tags: service-a
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -21,7 +34,7 @@ jobs:
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: service-b/service_b.json
-        service: svc_revolgy_service-b
+        task-definition: service-a/service_a.json
+        service: svc_revolgy_service-a
         cluster: cluster_revolgy
         wait-for-service-stability: true
