svc a release (red)

--- a/.github/workflows/DeployServiceB.yml
+++ b/.github/workflows/DeployServiceB.yml
@@ -2,6 +2,7 @@ name: Deploy task definion to the ECS cluster
 on:
   release:
     branches: [ master ]
+    types: [ published ]
     paths:
     - 'service-b/**'
 jobs:
