--- a/.github/workflows/DeployServiceB.yml
+++ b/.github/workflows/DeployServiceB.yml
@@ -6,8 +6,21 @@ on:
     paths:
     - 'service-b/**'
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v1.1.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: seyhello/revolgy-task
+          dockerfile: service-b/Dockerfile
+          tags: service-b
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Checkout
       uses: actions/checkout@v2
