--- a/.github/workflows/BuildServiceAContainer.yml
+++ b/.github/workflows/BuildServiceAContainer.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: seyhello/revolgy-task
+          repository: seyhello/hi-folks-svc-a
           dockerfile: service-a/Dockerfile
-          tags: service-a
+          tags: latest
