--- a/.github/workflows/BuildServiceBContainer.yml
+++ b/.github/workflows/BuildServiceBContainer.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: seyhello/revolgy-task
+          repository: seyhello/hi-folks-svc-b
           dockerfile: service-b/Dockerfile
-          tags: service-b
+          tags: latest
