--- a/service-b/Dockerfile
+++ b/service-b/Dockerfile
@@ -1,12 +1,12 @@
 FROM nginx:mainline
 
 # Little bit confusing, it is working only for GitHub Actions
-COPY service-b/wrapper.sh /
-COPY service-b/html /usr/share/nginx/html
+# COPY service-b/wrapper.sh /
+# COPY service-b/html /usr/share/nginx/html
 
 # Uncomment this to work in "local" Docker mode
-# COPY wrapper.sh /
-# COPY html /usr/share/nginx/html
+COPY wrapper.sh /
+COPY html /usr/share/nginx/html
 
 EXPOSE 80
 
