--- a/.github/workflows/DeployServiceA.yml
+++ b/.github/workflows/DeployServiceA.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: seyhello/revolgy-task
+          repository: seyhello/hi-folks-svc-a
           dockerfile: service-a/Dockerfile
-          tags: service-a
+          tags: latest
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -36,6 +36,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: service-a/service_a.json
-        service: svc_revolgy_service-a
-        cluster: cluster_revolgy
+        service: svc_[PROJECT]_service-a
+        cluster: [CLUSTER_NAME]
         wait-for-service-stability: true
